fix( beatsPicker ): - fix modal - fix scrollbar all browsers

--- a/styles/sections/BeatsPicker.scss
+++ b/styles/sections/BeatsPicker.scss
@@ -31,6 +31,7 @@
   }
 
   &__beats {
+    scrollbar-width: none; /* Firefox */
     color: #000;
     font-size: 3.5rem;
     font-weight: lighter;
